<resources>
    <string name="app_name">MyIMDB</string>
    <string name="title_home">Welcome to, MyIMDB!</string>
    <string name="nav_home">Home</string>
    <string name="nav_nowplaying">Now Playing</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_visualization">View Mode</string>

    <string name="home_welcome">Here you can search for your movies and check what\'s currently hot at cinemas all around the globe!</string>
    <string name="home_startBrowsing">Start Browsing!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_now_playing">Now Playing</string>
    <string name="cardview_item_movie_title">Movie Title</string>
    <string name="details_movie_overview_text">Movie Overview Text</string>
    <string name="details_overview_label">Overview</string>
    <string name="details_rating">Rating</string>
    <string name="details_rating_ending">/10</string>
    <string name="details_votes">Votes</string>
    <string name="details_release_date">Release date</string>
    <string name="details_duration">Duration</string>
    <string name="nav_sort_by">Sort By</string>
    <string name="nav_profile">Profile</string>


</resources>
