<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_nowplaying"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/nav_nowplaying" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/navigation_visualization"
        android:icon="@drawable/ic_change_visualization_eye_black_24dp"
        android:title="@string/nav_visualization" />

</menu>
