<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_favorites"
        android:icon="@drawable/ic_go_to_favorites_yellow_24dp"
        android:title="@string/nav_favorites"
        app:showAsAction="always" />


    <item
        android:id="@+id/toolbar_visualization"
        android:icon="@drawable/ic_change_visualization_eye_24dp"
        android:title="@string/nav_visualization"
        app:showAsAction="always"
        android:iconTint="@color/colorAccent" />

    <item
        android:id="@+id/toolbar_sort"
        android:icon="@drawable/ic_sort_by_black_24dp"
        app:showAsAction="always"
        android:iconTint="@color/colorAccent"
        android:title="@string/nav_sort_by" />

    <item
        android:id="@+id/toolbar_profile"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="always"
        android:iconTint="@color/colorAccent"
        android:title="@string/nav_profile">


        <menu>
            <item android:id="@+id/toolbar_profile_logout"
                android:title="Logout" />
        </menu>

    </item>

</menu>